--- a/style.css
+++ b/style.css
@@ -6,10 +6,18 @@
   
   body {
     background-color: #FFEDD5; /* hex: 0-F */
+    font-family: 'Roboto', sans-serif;
   }
   
   ul {
     list-style: none;
+  }
+  /*FONTS*/
+  h1, h2, h3, .price{
+    font-family: 'Roboto Serif', serif;
+    text-transform: uppercase;
+    color: #2D2C2A
+
   }
   
   /* HEADER */
@@ -26,10 +34,19 @@
   
   header h1 {
     margin-bottom: 4px;
+    font-size: 28px;
+    line-height: 33px;
+
   }
   
   header h1 span {
     color: #995000;
+  }
+  header p {
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    line-height: 16px;
+
   }
   
   /* SECTION */
@@ -43,6 +60,7 @@
     text-align: center;
   
     margin-bottom: 24px;
+    font-size: 18px;
   }
   
   /* LISTA */
@@ -57,4 +75,12 @@
   
   .details h3 {
     margin-bottom: 8px;
+    font-size: 16px;
+    line-height: 19px;
   }
+  .detais p {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+    line-height: 21px;
+  }
+  
